# smux-py

./: .coveragerc  .gitignore  LICENSE.md  environment.yml  pyproject.toml  pytest.ini  setup.cfg
smux/: _version.py  dft.py
smux/functions/: __init__.py  abstract_function.py  compositions.py  squareintegrable.py
smux/functions/tests/: test_compositions.py  test_squareintegrable.py
smux/tests/: test_dft.py
