[metadata]
name = SmuxPy
author = Nathanael Muot
author_email=nathanael.muot@gmail.com
version = attr: smux._version.__version__
description = SMUX notebook
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nmuot/smux-py
keywords = 
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10